# agentic-document-refinery

./: .gitignore  DOMAIN_NOTES.md  Dockerfile  README.md  main.py  pyproject.toml  refine_corpus.py  requirements.txt
document_refinery.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rubric/: extraction_rules.yaml
src/: __init__.py
src/agents/: chunker.py  extractor.py  indexer.py  query_agent.py  triage.py
src/data/: fact_table.py  vector_store.py
src/models/: __init__.py  schemas.py
src/strategies/: __init__.py  base.py  fast_text.py  layout.py  vision.py
src/utils/: llm.py
tests/: test_extractor.py  test_fact_table.py  test_hardening.py  test_triage.py  test_vector_store.py
